swagger enum documentation
