# app/Http/Controllers/Auth/AuthController.php
@@ -136,7 +136,7 @@ class AuthController extends Controller
     *                     @OA\Property(property="password", type="string"),
     *                     @OA\Property(property="password_confirmation", type="string"),
     *                     @OA\Property(property="name", type="string"),
-    *                     @OA\Property(property="gender", type="string"),
+    *                     @OA\Property(property="gender", type="string", enum={"male","female"}),
     *                     @OA\Property(property="date_of_birth", type="string", example="2005-01-15"),
     *                     @OA\Property(property="telephone_number", type="string"),
     *                     @OA\Property(property="province", type="string"),
@@ -144,7 +144,7 @@ class AuthController extends Controller
     *                     @OA\Property(property="district", type="string"),
     *                     @OA\Property(property="subdistrict", type="string"),
     *                     @OA\Property(property="street", type="string"),
-    *                     @OA\Property(property="religion", type="string"),
+    *                     @OA\Property(property="religion", type="string", enum={"islam","kristen","katolik","hindu","buddha","konghucu"}),
     *                     @OA\Property(property="latitude", type="number"),
     *                     @OA\Property(property="longitude", type="number"),
     *                     @OA\Property(property="class_id", type="integer"),
@@ -162,7 +162,7 @@ class AuthController extends Controller
     *                     @OA\Property(property="password", type="string"),
     *                     @OA\Property(property="password_confirmation", type="string"),
     *                     @OA\Property(property="name", type="string"),
-    *                     @OA\Property(property="gender", type="string"),
+    *                     @OA\Property(property="gender", type="string", enum={"male","female"}),
     *                     @OA\Property(property="date_of_birth", type="string"),
     *                     @OA\Property(property="telephone_number", type="string"),
     *                     @OA\Property(property="profile_photo", type="string", format="binary"),
@@ -171,7 +171,7 @@ class AuthController extends Controller
     *                     @OA\Property(property="district", type="string"),
     *                     @OA\Property(property="subdistrict", type="string"),
     *                     @OA\Property(property="street", type="string"),
-    *                     @OA\Property(property="religion", type="string"),
+    *                     @OA\Property(property="religion", type="string", enum={"islam","kristen","katolik","hindu","buddha","konghucu"}),
     *                     @OA\Property(property="latitude", type="number"),
     *                     @OA\Property(property="longitude", type="number"),
     *                     @OA\Property(property="class_id", type="integer"),
@@ -222,7 +222,7 @@ class AuthController extends Controller
      *                     @OA\Property(property="password", type="string"),
      *                     @OA\Property(property="password_confirmation", type="string"),
      *                     @OA\Property(property="name", type="string"),
-     *                     @OA\Property(property="gender", type="string"),
+    *                     @OA\Property(property="gender", type="string", enum={"male","female"}),
      *                     @OA\Property(property="date_of_birth", type="string"),
      *                     @OA\Property(property="telephone_number", type="string"),
      *                     @OA\Property(property="province", type="string"),
@@ -230,7 +230,7 @@ class AuthController extends Controller
      *                     @OA\Property(property="district", type="string"),
      *                     @OA\Property(property="subdistrict", type="string"),
      *                     @OA\Property(property="street", type="string"),
-     *                     @OA\Property(property="religion", type="string"),
+    *                     @OA\Property(property="religion", type="string", enum={"islam","kristen","katolik","hindu","buddha","konghucu"}),
      *                     @OA\Property(property="latitude", type="number"),
      *                     @OA\Property(property="longitude", type="number"),
      *                     @OA\Property(property="bank", type="string"),
@@ -245,7 +245,7 @@ class AuthController extends Controller
      *                     @OA\Property(property="password", type="string"),
      *                     @OA\Property(property="password_confirmation", type="string"),
      *                     @OA\Property(property="name", type="string"),
-     *                     @OA\Property(property="gender", type="string"),
+    *                     @OA\Property(property="gender", type="string", enum={"male","female"}),
      *                     @OA\Property(property="date_of_birth", type="string"),
      *                     @OA\Property(property="telephone_number", type="string"),
      *                     @OA\Property(property="profile_photo", type="string", format="binary"),
@@ -254,7 +254,7 @@ class AuthController extends Controller
      *                     @OA\Property(property="district", type="string"),
      *                     @OA\Property(property="subdistrict", type="string"),
      *                     @OA\Property(property="street", type="string"),
-     *                     @OA\Property(property="religion", type="string"),
+    *                     @OA\Property(property="religion", type="string", enum={"islam","kristen","katolik","hindu","buddha","konghucu"}),
      *                     @OA\Property(property="latitude", type="number"),
      *                     @OA\Property(property="longitude", type="number"),
      *                     @OA\Property(property="bank", type="string"),
