# app/Http/Controllers/Students/ProfileController.php
@@ -78,9 +78,9 @@ class ProfileController extends Controller
      *             @OA\Property(property="name", type="string"),
      *             @OA\Property(property="telephone_number", type="string"),
      *             @OA\Property(property="profile_photo_url", type="string"),
-     *             @OA\Property(property="gender", type="string"),
+    *             @OA\Property(property="gender", type="string", enum={"male","female"}),
      *             @OA\Property(property="date_of_birth", type="string"),
-     *             @OA\Property(property="religion", type="string"),
+    *             @OA\Property(property="religion", type="string", enum={"islam","kristen","katolik","hindu","buddha","konghucu"}),
      *             @OA\Property(property="province", type="string"),
      *             @OA\Property(property="regency", type="string"),
      *             @OA\Property(property="district", type="string"),
@@ -114,9 +114,9 @@ class ProfileController extends Controller
      *         @OA\JsonContent(
      *             required={"name","gender","date_of_birth","religion","telephone_number","province","regency","district","subdistrict","street"},
      *             @OA\Property(property="name", type="string"),
-     *             @OA\Property(property="gender", type="string"),
+    *             @OA\Property(property="gender", type="string", enum={"male","female"}),
      *             @OA\Property(property="date_of_birth", type="string"),
-     *             @OA\Property(property="religion", type="string"),
+    *             @OA\Property(property="religion", type="string", enum={"islam","kristen","katolik","hindu","buddha","konghucu"}),
      *             @OA\Property(property="telephone_number", type="string"),
      *             @OA\Property(property="province", type="string"),
      *             @OA\Property(property="regency", type="string"),
@@ -154,12 +154,12 @@ class ProfileController extends Controller
      *         required=true,
      *         @OA\JsonContent(
      *             required={"course_mode","description","qualification","learning_method","schedules"},
-     *             @OA\Property(property="course_mode", type="string"),
+    *             @OA\Property(property="course_mode", type="string", enum={"online","offline"}),
      *             @OA\Property(property="description", type="string"),
      *             @OA\Property(property="qualification", type="array", @OA\Items(type="string")),
      *             @OA\Property(property="learning_method", type="string"),
      *             @OA\Property(property="schedules", type="array", @OA\Items(type="object",
-     *                 @OA\Property(property="day", type="string"),
+    *                 @OA\Property(property="day", type="string", enum={"minggu","senin","selasa","rabu","kamis","jumat","sabtu"}),
      *                 @OA\Property(property="time", type="string", example="08:00")
      *             ))
      *         )
